styles.css
@import url('https://fonts.googleapis.com/css2?family=Mouse+Memoirs&family=Open+Sans:wght@400;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap');

body {
    font-family: 'Mouse Memoirs', sans-serif;
    color: #444444;
}

body, h1, h2, h3, h4, h5, ol {
    margin: 0;
    padding: 0;
}

a {
    color: #186DFF;
    text-decoration: none;
}

a:visited {
    color: #E7A192;
    text-decoration: none;
}

.question-counter {
    font-size: 36px;
    margin-top: 30px;
}

.title, .sub-title {
    font-family: 'Bungee Inline';
    font-weight: normal;
    font-style: normal;
}

.title {
    font-size: 60px;
}

.sub-title {
    font-size: 20px;
}

.choose-category {
    font-size: 24px;
    padding-bottom: 20px;
    letter-spacing: 1px;
}

.credits {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    font-size: 18px;
    letter-spacing: 1px;
}

.results-title {
    padding-top: 40px;
    padding-bottom: 0px;
    font-size: 60px;
}

.you-got-x-correct {
    font-size: 30px;
}

button {
    font-family: 'Mouse Memoirs', sans-serif;
    font-size: 20px;
    background-color: #FFCBC0;
    border: none;
    width: 60px;
    border-radius: 6px;
    padding: 5px;
    box-shadow: 0px 0px 2px 2px rgb(0,0,0);
    letter-spacing: 1px;
}

button:hover {
    background-color: #E5EDFB;
}

.body-container {
    display: flex;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
    background-color: #FFF9C0;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 450px;
    width: 500px;
    text-align: center;
}

.question-text {
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    margin: 30px 40px 20px;
}

.question-text-summary {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    margin: 30px 0;
}

.category-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    height: 160px;
}

.category-button {
    font-size: 18px;
    width: 100px;
    margin: 5px 0;
}

.hidden {
    display: none;
}

.answers {
    padding: 0 50px;
    text-align: left;
    list-style: none;
    font-size: 16px;
}

.answer {
    background: /* blank box https://iconmonstr.com/checkbox-11-svg/ */
        url("data:image/svg+xml, <svg width='22' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M5 2c-1.654 0-3 1.346-3 3v14c0 1.654 1.346 3 3 3h14c1.654 0 3-1.346 3-3v-14c0-1.654-1.346-3-3-3h-14zm19 3v14c0 2.761-2.238 5-5 5h-14c-2.762 0-5-2.239-5-5v-14c0-2.761 2.238-5 5-5h14c2.762 0 5 2.239 5 5z'/></svg>")
        no-repeat;
    padding: 2px 0px 5px 30px;
    margin-bottom: 10px;
    font-family: 'Open Sans', sans-serif;
}

.selectable:hover {
    cursor: pointer;
}

/* selected style */
/* correct answer style true true */
.selected, .correct {
    color: green;
    background: /* tick https://iconmonstr.com/checkbox-9-svg/ */
    url("data:image/svg+xml, <svg width='23' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M19 0h-14c-2.762 0-5 2.239-5 5v14c0 2.761 2.238 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-8.959 17l-4.5-4.319 1.395-1.435 3.08 2.937 7.021-7.183 1.422 1.409-8.418 8.591z'/></svg>")
    no-repeat; /* <-- change `left` & `top` too for extra control */
    /* reset styles (optional): */
}

/* incorrectly answer style true false */
.incorrect {
    color: red; /* maybe remove this - cross is enough */
    background: /* cross */
    url("data:image/svg+xml, <svg width='23' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M22 2v20h-20v-20h20zm2-2h-24v24h24v-24zm-6 16.538l-4.592-4.548 4.546-4.587-1.416-1.403-4.545 4.589-4.588-4.543-1.405 1.405 4.593 4.552-4.547 4.592 1.405 1.405 4.555-4.596 4.591 4.55 1.403-1.416z'/></svg>")
    no-repeat;
}

/* correct answer revealed false true */
.reveal {
    color: green;
}

.nav-buttons {
    /* background-color: orangered; */
    display: flex;
    align-items: center;
    justify-content: space-around;
    height: 50px;
}

.not-enough-selected {
    font-family: 'Open Sans', sans-serif;
    width: 220px;
    font-size: 14px;
    color: red;
}

.loading {
    font-size: 48px;
}

.animate__animated.animate__fadeOutUp {
    --animate-duration: 2s;
}

/* Extra small devices (phones, 280px and down) */
@media only screen and (max-width: 280px) {

    .container {
        width: 280px;
    }

    .title {
        font-size: 40px;
    }
    
    .sub-title {
        font-size: 15px;
    }

    .question-text {
        font-size: 18px;
    }
    
    .category-button {
        width: 80px;
    }
    
    .choose-category {
        font-size: 20px;
    }
    
    .answers {
        padding: 0 20px;
        font-size: 14px;
    }

    .answer {
        overflow-wrap: break-word;
    }    
    
    button {
        font-size: 16px;
    }

    .not-enough-selected {
        width: 100px;
        font-size: 10px;
    }    
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 600px) {
    
    .title {
        font-size: 80px;
    }
    
    .sub-title {
        font-size: 24px;
    }

    .question-text {
        font-size: 20px;
    }
    
    .answers {
        font-size: 16px;
    }
    
    .choose-category {
        font-size: 26px;
    }
    
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1024px) {
    
    .title {
        font-size: 100px;
    }
    
    .sub-title {
        font-size: 30px;
    }

    .container {
        width: 650px;
    }    

    .question-counter {
        font-size: 48px;
    }

    .question-text {
        font-size: 24px;
    }

    .answers {
        font-size: 18px;
    }
    
    .choose-category {
        font-size: 30px;
    }
 }

